---
title: edu.nust.engine.core.components
config:
  look: classic
  layout: elk
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
  class Transform
namespace edu.nust.engine.core.components.renderers {
  class BoxRenderer
  class CircleRenderer
  class SpriteRenderer
  class ShapeRenderer
}
ShapeRenderer <|-- BoxRenderer : extends
ShapeRenderer <|-- CircleRenderer : extends